# xilocanvas

./: README.md  pyproject.toml
examples/xilocanvas_example/: pyproject.toml
examples/xilocanvas_example/src/: main.py
src/flutter/xilocanvas/: pubspec.yaml
src/flutter/xilocanvas/lib/src/: xilocanvas.dart
src/xilocanvas/: xilocanvas.py
src/xilocanvas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
